--- a/src/app/libros/libros.component.html
+++ b/src/app/libros/libros.component.html
@@ -1,2 +1,2 @@
-<app-libro *ngFor="let libro of libros" [tituloLibro]="libro"></app-libro>
+<app-libro (libroClicked)="eliminarLibro(libro)" *ngFor="let libro of libros" [tituloLibro]="libro"></app-libro>
 
