--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,9 @@
 <!--<app-usuario></app-usuario>-->
-<app-libros></app-libros>
+<h1>Mi aplicación Angular</h1>
+
+<!-- Enlaces de navegación -->
+<a routerLink="/">Inicio</a>
+<a routerLink="/libros">Libros Favoritos</a>
+
+<!-- Contenedor para mostrar los componentes según la ruta -->
+<router-outlet></router-outlet>
